gcc/testsuite/rust/rustc/ui/issues/issue-2151.rs
fn main() {
    let x = panic!();
    x.clone(); // { dg-error ".E0282." "" { target *-*-* } }
}

